<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lidia.appproject2017_2.Activity.RestImage3Activity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/rest3_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/rest3_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/rest3_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="end"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/backarrow" />

                <TextView
                    android:id="@+id/rest3_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/rest3_back"
                    android:text="@string/register_store_image"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/rest3_camera"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/camera"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:layout_alignBottom="@+id/rest3_done"
                    android:layout_toStartOf="@+id/rest3_done"/>
                <ImageView
                    android:id="@+id/rest3_done"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/done" />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/register2_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="25dp"
        android:paddingStart="25dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_below="@+id/rest3_appBarLayout">

        <TextView
            android:id="@+id/rest3_titletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="✽ 사진을 등록해주세요."
            android:textColor="@color/black"
            android:textSize="16sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_image_sub1"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_image_sub2"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:layout_marginBottom="20dp"/>
        <!--320 ,120 -->
        <ImageView
            android:id="@+id/rest3_image"
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:background="@color/dialogBack"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="✽ 등록 리스트"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rest3_recycler"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/main">
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>


</RelativeLayout>
