<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lidia.appproject2017_2.Activity.PensionCommon1Activity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/pension_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/pension_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/pension_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_gravity="end"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/close" />

            <TextView
                android:id="@+id/pension_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/pension_x"
                android:text="@string/register_store"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/pension_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/next" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pension_appBarLayout">
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="25dp"
        android:paddingStart="25dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/pension_titletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="✽ 점포명을 입력해주세요"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/pension_title_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/register_edit"
            android:focusableInTouchMode="true"
            android:text="바우바우"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">
            <TextView
                android:id="@+id/pension_address_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="✽ 주소를 입력해주세요"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/pension_address_subtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pension_address_text"
                android:text="@string/map_check"
                android:textColor="@color/red"
                android:textSize="11sp"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/pension_address_edit"
                android:layout_width="310dp"
                android:layout_height="40dp"
                android:background="@drawable/register_edit"
                android:layout_below="@+id/pension_address_subtext"
                android:focusableInTouchMode="true" />

            <ImageView
                android:id="@+id/pension_address_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@+id/pension_address_subtext"
                android:src="@drawable/map2"
                android:layout_toEndOf="@+id/pension_address_edit"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="✽ 가게 전화번호를 입력해주세요"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/pension_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/register_edit"
            android:focusableInTouchMode="true"
            android:layout_marginBottom="12dp"
            android:text="02-789-2221"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="✽ 가게 웹사이트를 입력해주세요"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/pension_web"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/register_edit"
            android:focusableInTouchMode="true"
            android:layout_marginBottom="12dp"
            android:text="www.bulter.com"/>

        <TextView
            android:id="@+id/pension_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="✽ 가격대를 입력해주세요"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginBottom="3dp"/>

        <TextView
            android:id="@+id/pension_price_subtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pension_price_text"
            android:text="@string/sub_price"
            android:textColor="@color/red"
            android:textSize="11sp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/pension_price"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/register_edit"
            android:focusableInTouchMode="true"
            android:layout_marginBottom="12dp"
            android:text="(비수기, 평일 기준) 7-19만원"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="✽ 가게 소개글을 입력해주세요"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/pension_plus"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@drawable/register_edit"
            android:focusableInTouchMode="true"
            android:layout_marginBottom="12dp"
            android:text="안녕하세요. 강아지와 함께 즐겁게 머물수 있는 호텔 바우바우입니다."/>

        <TextView
            android:id="@+id/pension_caution_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="✽ 가게 이용시 주의사항을 입력해주세요"
            android:layout_marginBottom="3dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caution1"
            android:textColor="@color/red"
            android:textSize="11sp"
            android:layout_marginBottom="1dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caution2"
            android:textColor="@color/red"
            android:textSize="11sp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/pension_caution"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@drawable/register_edit"
            android:focusableInTouchMode="true"
            android:layout_marginBottom="12dp"
            android:text="발정기 시기에는 방문을 자제해주셨으면 합니다. 객실 내 일정 이상 수준 손상시 추가 금액이 청구 되실 수 있습니다 홈페이지를 참조해주세요 "/>
    </LinearLayout>

    </ScrollView>
</RelativeLayout>
